# BitcoinCredit

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  rust.yml  test.yml
.github/workflows/wizard/: askpass.sh  spec.xml
.github/workflows/wizard/macos/: Bitcredit Core.webloc  bitcredit.icns  icns.rsrc  install.sh
.github/workflows/wizard/windows/: install_service.bat
crates/bcr-ebill-api/: Cargo.toml
crates/bcr-ebill-api/src/: constants.rs  lib.rs
crates/bcr-ebill-api/src/blockchain/: mod.rs
crates/bcr-ebill-api/src/data/: mod.rs
crates/bcr-ebill-api/src/dht/: behaviour.rs  client.rs  event_loop.rs  mod.rs
crates/bcr-ebill-api/src/persistence/: mod.rs
crates/bcr-ebill-api/src/service/: backup_service.rs  bill_service.rs  company_service.rs  contact_service.rs  file_upload_service.rs  identity_service.rs  mod.rs  search_service.rs
crates/bcr-ebill-api/src/service/bill_service/: blocks.rs  data_fetching.rs  error.rs  issue.rs  mod.rs  payment.rs  propagation.rs  service.rs  test_utils.rs  validation.rs
crates/bcr-ebill-api/src/service/notification_service/: bill_action_event_handler.rs  default_service.rs  email_lettre.rs  email_sendgrid.rs  event.rs  handler.rs  mod.rs  nostr.rs  push_notification.rs  test_utils.rs
crates/bcr-ebill-api/src/tests/: mod.rs
crates/bcr-ebill-api/src/util/: file.rs  mod.rs
crates/bcr-ebill-core/: Cargo.toml
crates/bcr-ebill-core/src/: bill.rs  constants.rs  contact.rs  identity.rs  lib.rs  notification.rs
crates/bcr-ebill-core/src/blockchain/: mod.rs
crates/bcr-ebill-core/src/blockchain/bill/: block.rs  chain.rs  mod.rs
crates/bcr-ebill-core/src/blockchain/company/: mod.rs
crates/bcr-ebill-core/src/blockchain/identity/: mod.rs
crates/bcr-ebill-core/src/tests/: mod.rs
crates/bcr-ebill-core/src/util/: crypto.rs  date.rs  mod.rs
crates/bcr-ebill-persistence/: Cargo.toml
crates/bcr-ebill-persistence/src/: backup.rs  bill.rs  company.rs  constants.rs  contact.rs  file_upload.rs  identity.rs  lib.rs  nostr.rs  notification.rs
crates/bcr-ebill-persistence/src/db/: backup.rs  bill.rs  bill_chain.rs  company.rs  company_chain.rs  contact.rs  identity.rs  identity_chain.rs  mod.rs  nostr_event_offset.rs  notification.rs
crates/bcr-ebill-persistence/src/tests/: mod.rs
crates/bcr-ebill-web/: Cargo.toml
crates/bcr-ebill-web/src/: api_docs.rs  config.rs  constants.rs  data.rs  error.rs  main.rs  router.rs
crates/bcr-ebill-web/src/handlers/: bill.rs  company.rs  contacts.rs  identity.rs  middleware.rs  mod.rs  notifications.rs  quotes.rs
crates/bcr-ebill-web/src/job/: mod.rs
crates/bcr-ebill-web/src/requests/: contacts.http
docs/: configuration.md
frontend/: index.html
src/: config.rs  constants.rs  main.rs
src/bill/: identity.rs  mod.rs
src/blockchain/: chain.rs  mod.rs
src/blockchain/bill/: block.rs  chain.rs  mod.rs
src/blockchain/company/: mod.rs
src/blockchain/identity/: mod.rs
src/data/: bill.rs  company.rs  contact.rs  identity.rs  mod.rs  notification.rs
src/dht/: behaviour.rs  client.rs  event_loop.rs  mod.rs
src/persistence/: backup.rs  bill.rs  company.rs  contact.rs  identity.rs  mod.rs  notification.rs
src/persistence/db/: backup.rs  bill.rs  bill_chain.rs  company.rs  company_chain.rs  contact.rs  identity.rs  identity_chain.rs  mod.rs  notification.rs
src/persistence/surrealdb/: mod.rs
src/service/: backup_service.rs  bill_service.rs  company_service.rs  contact_service.rs  file_upload_service.rs  identity_service.rs  mod.rs  notifiction_service.rs  search_service.rs
src/service/notification_service/: bill_action_event_handler.rs  default_service.rs  email.rs  email_sendgrid.rs  event.rs  handler.rs  lettre_email.rs  mod.rs  nostr.rs  test_utils.rs  transport.rs
src/tests/: mod.rs
src/util/: crypto.rs  currency.rs  date.rs  file.rs  mod.rs  terminal.rs
src/web/: api_docs.rs  data.rs  mod.rs
src/web/handlers/: bill.rs  company.rs  contacts.rs  identity.rs  mod.rs  notifications.rs  quotes.rs
src/web/handlers/company/: data.rs  mod.rs
src/web/requests/: general.http  notifications.http
