[package]
name = "bitcredit"
version = "0.2.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
borsh = "1.5.5"
borsh-derive = "1.5.5"
env_logger = "0.11.6"
chrono = "0.4.39"
libp2p = { version = "0.51.4", features = [
  "tcp",
  "dns",
  "async-std",
  "noise",
  "yamux",
  "tokio",
  "macros",
  "kad",
  "request-response",
  "identify",
  "gossipsub",
  "relay",
  "dcutr",
  "secp256k1",
] }
tokio = { version = "1.43.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "io-std",
  "fs",
] }
async-trait = "0.1.86"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.1"
open = "5.3.2"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.19"
log = "0.4.25"
futures = "0.3.31"
bitcoin = { version = "0.32.5", features = ["rand", "rand-std"] }
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive", "env"] }
url = "2.5.4"
thiserror = "2.0.11"
moksha-core = { git = "https://github.com/mtbitcr/moksha" }
moksha-wallet = { git = "https://github.com/mtbitcr/moksha" }
hf = { version = "0.3.10", default-features = false }
lettre = { version = "0.11.12", features = [
  "tokio1",
  "tokio1-native-tls",
  "file-transport",
] }
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
nostr-sdk = { version = "0.39.0", features = ["nip59"] }
uuid = { version = "1.13.1", features = ["v4"] }
infer = { version = "0.19.0", default-features = false }
surrealdb = "2.2.0"
lazy_static = "1.5.0"
bs58 = "0.5.1"
utoipa = { version = "5.3.1", features = ["rocket_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["rocket", "vendored"] }
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
bip39 = { version = "2.1.0", features = ["rand"] }
hex = "0.4.3"

[dev-dependencies]
mockall = "0.13.1"
nostr-relay-builder = "0.39.0"
surrealdb = { version = "2.2.0", features = ["kv-mem"] }

[features]
embedded-db = ["surrealdb/kv-rocksdb"]
