[workspace]
resolver = "3"
members = [ "crates/bcr-ebill-web", "crates/bcr-ebill-core", "crates/bcr-ebill-api", "crates/bcr-ebill-persistence" ]


[workspace.dependencies]
bs58 = "0.5.1"
sha2 = { version = "0.10.8", default-features = false }
borsh = "1.5.5"
borsh-derive = "1.5.5"
env_logger = { version = "0.11.6", default-features = false }
log = "0.4.25"
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
tokio = "1.43.0"
async-trait = "0.1.86"
serde_json = "1.0.138"
serde = { version = "1.0.217", default-features = false }
serde_repr = "0.1.19"
futures = { version = "0.3.31", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
lazy_static = "1.5.0"
uuid = { version = "1", default-features = false, features = ["v4"] }
bitcoin = { version = "0.32.5",  default-features = false }
bip39 = { version = "2.1.0", features = ["rand"] }
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
nostr-sdk = { version = "0.39.0", features = ["nip59"] }
