[package]
name = "bcr-ebill-core"
version = "0.2.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
bs58.workspace = true
sha2.workspace = true
thiserror.workspace = true
bitcoin.workspace = true
bip39.workspace = true
ecies.workspace = true
nostr-sdk.workspace = true

