[package]
name = "bcr-ebill-web"
version = "0.2.0"
edition = "2024"

[dependencies]
env_logger.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
lazy_static.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rocket = "0.5.1"
rocket_cors = { version = "0.6.0", default-features = false }
rocket_ws = { version = "0.1.1", features = ["tokio-tungstenite"], default-features = false }
open = "5.3.2"
clap = { version = "4.5.29", features = ["derive", "env"] }
utoipa = { version = "5.3.1", features = ["chrono", "rocket_extras"], default-features = false }
utoipa-swagger-ui = { version = "9.0.0", features = ["rocket"], default-features = false }
bcr-ebill-api = { path = "../bcr-ebill-api" }

[features]
embedded-db = ["bcr-ebill-api/embedded-db"]
